fix(Checkbox): fixed fontFamily to avoid different alignment (#6875)

--- a/packages/wix-ui-tpa/src/components/Checkbox/Checkbox.st.css
+++ b/packages/wix-ui-tpa/src/components/Checkbox/Checkbox.st.css
@@ -119,7 +119,8 @@
     border: 1px solid;
     border-color: applyOpacity(value(CurrentBorderColor), 0.6);
     border-radius: 1px;
-
+    
+    font-family: Arial, sans-serif;
     font-size: 13px;
     line-height: 1.2;
     vertical-align: middle;
